--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,24 @@ Package: MultiMed
 Title: Methods for Mediation Analysis with High-Dimensional Mediators
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Dylan", "Clark-Boucher", , "dclarkboucher@fas.harvard.edu", 
+    role = c("aut"), comment = c(ORCID = "0000-0001-7334-2966"))
+Description: MultiMed provides a suite of functions for performing mediation
+    analysis when the mediators are high-dimensional. In addition to 
+    centralizing the many existing packages for high-dimensional mediation, we 
+    provide organized, well-documented functions for a handle of methods which, 
+    though programmed originally by their respective authors, have not 
+    previously been formalized into R packages or been made suitable for public 
+    use. The methods we include cover a broad array of approaches and 
+    objectives, and are described in detail in both our companion 
+    manuscript--"Methods for Mediation Analysis with High-Dimensional DNA 
+    Methylation Data: Possible Choices and Comparison"--as well as their 
+    original papers. The methods offered by our package include BSLMM (Song et 
+    al. 2019), HDMA (Gao et al. 2019), HDMM (also called PDMs) (Chén et al. 
+    2018), HILMA (Zhou et al. 2020), HIMA (Zhang et al. 2016), LVMA (Derkach et 
+    al. 2019), MedFix (Zhang 2021), pathway LASSO (Zhao & Luo 2022), PCMA (Huang 
+    & Pan 2016), and SPCMA (Zhao et al. 2020). References for the original 
+    papers can be found in their respective functions.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
@@ -13,3 +28,23 @@ RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
 LazyData: true
+Imports: 
+    bama (>= 1.3.0),
+    foreach (>= 1.5.2),
+    freebird (>= 1.0),
+    gcdnet (>= 1.0.6),
+    genlasso (>= 1.6.1),
+    glmnet (>= 4.1.6),
+    hdi (>= 0.1.9),
+    iterators (>= 1.0.14),
+    lars (>= 1.3),
+    MASS (>= 7.3.58.1),
+    Matrix (>= 1.5.1),
+    mediation (>= 4.5.0),
+    ncvreg (>= 3.13.0),
+    psych (>= 2.2.9),
+    Rmosek (>= 1.3.5),
+    sandwich (>= 3.0.2),
+    scalreg (>= 1.0.1),
+    stats (>= 4.2.2),
+    utils (>= 4.2.2)
