--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,15 @@ export(mediate_plasso)
 export(mediate_spcma)
 import(MASS)
 import(foreach)
+import(genlasso)
+import(hdi)
+import(iterators)
+import(ncvreg)
 import(stats)
+import(utils)
+importFrom(bama,bama)
+importFrom(freebird,hilma)
+importFrom(gcdnet,cv.gcdnet)
+importFrom(gcdnet,gcdnet)
+importFrom(mediation,mediate)
+importFrom(stats,coef)
