--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: MultiMed
+Package: hdmed
 Title: Methods for Mediation Analysis with High-Dimensional Mediators
 Version: 0.0.0.9000
 Author: Dylan Clark-Boucher
 Maintainer: Dylan Clark-Boucher <dclarkboucher@fas.harvard.edu>
-Description: MultiMed provides a suite of functions for performing mediation
+Description: A suite of functions for performing mediation
     analysis when the mediators are high-dimensional. In addition to 
     centralizing the many existing packages for high-dimensional mediation, we 
     provide organized, well-documented functions for a handle of methods which, 
@@ -13,12 +13,17 @@ Description: MultiMed provides a suite of functions for performing mediation
     objectives, and are described in detail in both our companion 
     manuscript--"Methods for Mediation Analysis with High-Dimensional DNA 
     Methylation Data: Possible Choices and Comparison"--as well as their 
-    original papers. The methods offered by our package include BSLMM (Song et 
-    al. 2019), HDMA (Gao et al. 2019), HDMM (also called PDMs) (Chén et al. 
-    2018), HILMA (Zhou et al. 2020), HIMA (Zhang et al. 2016), LVMA (Derkach et 
-    al. 2019), MedFix (Zhang 2021), pathway LASSO (Zhao & Luo 2022), PCMA (Huang 
-    & Pan 2016), and SPCMA (Zhao et al. 2020). References for the original 
-    papers can be found in their respective functions.
+    original papers. The methods offered by our package include the Bayesian
+    sparse linear mixed model (BSLMM) by Song et al. (2019), high-dimensional 
+    mediation analysis by Gao et al. (2019), high-dimensional multivariate 
+    mediation (HDMM) by Chén et al. (2018), high-dimensional linear mediation 
+    analysis (HILMA) by Zhou et al. (2020), high-dimensional mediation analysis
+    by Zhang et al. (2016), latent variable mediation analysis (LVMA) by Derkach 
+    et al. (2019), mediation by fixed-effect model (MedFix) by Zhang (2021), 
+    pathway LASSO by Zhao & Luo (2022), principal component mediation analysis 
+    (PCMA) by Huang & Pan (2016), and sparse principal component mediation 
+    analysis by Zhao et al. (2020). References for the original papers can be 
+    found in their respective functions.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -32,18 +37,10 @@ Imports:
     freebird (>= 1.0),
     gcdnet (>= 1.0.6),
     genlasso (>= 1.6.1),
-    glmnet (>= 4.1.6),
     hdi (>= 0.1.9),
     iterators (>= 1.0.14),
-    lars (>= 1.3),
     MASS (>= 7.3.58.1),
-    Matrix (>= 1.5.1),
     mediation (>= 4.5.0),
     ncvreg (>= 3.13.0),
-    psych (>= 2.2.9),
-    Rmosek (>= 1.3.5),
-    sandwich (>= 3.0.2),
-    scalreg (>= 1.0.1),
     stats (>= 4.2.2),
-    utils (>= 4.2.2),
-    HIMA (>= 2.0.1)
+    utils (>= 4.2.2)
