--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: hdmed
 Title: Methods for Mediation Analysis with High-Dimensional Mediators
-Version: 1.0
+Version: 1.0.0
 Authors@R:
     c(person(given = "Dylan",
            family = "Clark-Boucher",
@@ -12,26 +12,26 @@ Authors@R:
            email = "mkleinsa@umich.edu"))
 Maintainer: Dylan Clark-Boucher <dclarkboucher@fas.harvard.edu>
 Description: A suite of functions for performing mediation
-    analysis when the mediators are high-dimensional. In addition to 
-    centralizing the many existing packages for high-dimensional mediation, we 
-    provide organized, well-documented functions for a handle of methods which, 
-    though programmed originally by their respective authors, have not 
-    previously been formalized into R packages or been made suitable for public 
-    use. The methods we include cover a broad array of approaches and 
-    objectives, and are described in detail in both our companion 
-    manuscript--"Methods for Mediation Analysis with High-Dimensional DNA 
-    Methylation Data: Possible Choices and Comparison"--as well as their 
-    original papers. The methods offered by our package include the Bayesian
-    sparse linear mixed model (BSLMM) by Song et al. (2019), high-dimensional 
-    mediation analysis by Gao et al. (2019), high-dimensional multivariate 
-    mediation (HDMM) by Chén et al. (2018), high-dimensional linear mediation 
-    analysis (HILMA) by Zhou et al. (2020), high-dimensional mediation analysis
-    by Zhang et al. (2016), latent variable mediation analysis (LVMA) by Derkach 
-    et al. (2019), mediation by fixed-effect model (MedFix) by Zhang (2021), 
-    pathway LASSO by Zhao & Luo (2022), principal component mediation analysis 
-    (PCMA) by Huang & Pan (2016), and sparse principal component mediation 
-    analysis by Zhao et al. (2020). References for the original papers can be 
-    found in their respective functions.
+    analysis with high-dimensional mediators. In addition to centralizing code 
+    from several existing packages for high-dimensional mediation analysis, we 
+    provide organized, well-documented functions for a handle of methods 
+    which, though programmed their original authors, have not previously been 
+    formalized into R packages or been made presentable for public use. The 
+    methods we include cover a broad array of approaches and objectives, and are
+    described in detail by both our companion manuscript---"Methods for 
+    Mediation Analysis with High-Dimensional DNA Methylation Data: Possible 
+    Choices and Comparison"---and the original publications that proposed them. 
+    The specifc methods offered by our package include the Bayesian sparse 
+    linear mixed model (BSLMM) by Song et al. (2019); high-dimensional mediation
+    analysis (HDMA) by Gao et al. (2019); high-dimensional multivariate 
+    mediation (HDMM) by Chén et al. (2018); high-dimensional linear mediation 
+    analysis (HILMA) by Zhou et al. (2020); high-dimensional mediation analysis
+    (HIMA) by Zhang et al. (2016); latent variable mediation analysis (LVMA) by 
+    Derkach et al. (2019); mediation by fixed-effect model (MedFix) by 
+    Zhang (2021); pathway LASSO by Zhao & Luo (2022); principal component 
+    mediation analysis (PCMA) by Huang & Pan (2016); and sparse principal 
+    component mediation analysis (SPCMA) by Zhao et al. (2020). Citations for 
+    the corresponding papers can be found in their respective functions.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -47,7 +47,7 @@ Imports:
     genlasso (>= 1.6.1),
     hdi (>= 0.1.9),
     iterators (>= 1.0.14),
-    MASS (>= 7.3.58.1),
+    MASS,
     mediation (>= 4.5.0),
     ncvreg (>= 3.13.0),
     stats,
